<resources>
    <string name="app_name">Countries</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="logo_image">Logo image</string>
    <string name="btn_text_show_all">Show all countries</string>
    <string name="btn_text_show_my_country">Show my country</string>
    <string name="btn_text_search_country">Search Country</string>
    <string name="error_permission_denied">Error. The location permission for this app as not granted!</string>
    <string name="search_label">Search for a country</string>
    <string name="search_instructions_label">Type the name, part of the name or other info related to the country you want to find:</string>
    <string name="input_country_hint">Type a country name, like Sweden</string>
    <string name="btn_search_label">Search</string>
    <string name="contentFlag">Country flag</string>
    <string name="capital_label">Capital:</string>
    <string name="region_label">Region:</string>
    <string name="calling_label">Calling codes:</string>
    <string name="subregion_label">Sub-region:</string>
    <string name="population_label">Population:</string>
    <string name="borders_label">Borders:</string>
    <string name="timezone_label">Timezone:</string>
    <string name="language_label">Languages:</string>
    <string name="currency_label">Currencies:</string>
    <string name="currency_code">Code:</string>
    <string name="currency_code_sample">XYZ</string>
    <string name="currency_name">Name:</string>
    <string name="currency_name_sample">Coin</string>
    <string name="language_iso">ISO 639-1 code:</string>
    <string name="language_name_label">Language name:</string>
    <string name="language_native_label">Language native name:</string>
    <string name="results">Search results:</string>
    <string name="my_location_greeting">According to your current location you are in:</string>
    <string name="my_location_searching">Checking your current location...</string>
    <string name="current_country_flag">Current country flag image</string>
    <string name="my_country_name"> My country</string><string />
    <string name="show_my_country_details">Show my country details</string>
    <string name="show_my_caountry_map">Show my country in the map</string>
    <string name="globe_image">A globe image</string>
    <string name="country_list_label">Countries list</string>
    <string name="country_instructions">Scroll and then choose a country, tap on it for more information about it.</string>
    <string name="search_error">No country found based on the input</string>
    <string name="network_error">No network connection</string>
    <string name="my_contry_fragment">My Country</string>
    <string name="search_country_fragment">Search Country</string>
    <string name="countries_fragment">All Countries</string>
    <string name="country_details_fragment">Country Details</string>
    <string name="fragment_maps">My country in the map</string>
    <string name="fragment_launch_lable">Countries App</string>
</resources>