<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="eu.marcelomorais.countries.MainActivity">

        <ImageView
            android:id="@+id/logo_image"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:layout_marginEnd="@dimen/margin_8dp"
            android:contentDescription="@string/logo_image"
            app:srcCompat="@drawable/ic_world_svg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_show_all_countries"
            style="@style/button_style"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="@dimen/height_48dp"
            android:layout_marginTop="@dimen/margin_64dp"
            android:text="@string/btn_text_show_all"
            app:layout_constraintBottom_toTopOf="@+id/btn_show_my_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_image" />

        <Button
            android:id="@+id/btn_show_my_country"
            style="@style/button_style"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/btn_text_show_my_country"
            app:layout_constraintBottom_toTopOf="@+id/btn_search_country"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_show_all_countries" />

        <Button
            android:id="@+id/btn_search_country"
            style="@style/button_style"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_24dp"
            android:text="@string/btn_text_search_country"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_show_my_country"
            app:layout_constraintVertical_bias="0.060000002" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>