<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="viewModel"
            type="eu.marcelomorais.countries.countryview.CountryDetailsViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/details_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/bigCountryFlag"
            android:layout_width="@dimen/details_flag_width"
            android:layout_height="@dimen/details_flag_height"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_16dp"
            android:layout_marginEnd="@dimen/margin_16dp"
            android:contentDescription="@string/contentFlag"
            app:country_flag="@{viewModel.currentCountryDetails.get(0).flag}"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detailCountryName"
            style="@style/country_detail_header"
            android:layout_width="@dimen/size_0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@{viewModel.currentCountryDetails.get(0).name}"
            app:layout_constraintBottom_toTopOf="@+id/country_details_loading"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/bigCountryFlag" />

        <ProgressBar
            android:id="@+id/country_details_loading"
            android:layout_width="@dimen/loading_size"
            android:layout_height="@dimen/loading_size"
            android:layout_marginEnd="@dimen/margin_32dp"
            android:indeterminateTint="@color/colorPrimaryDark"
            android:show_progress="@{viewModel.loading}"
            android:visibility="invisible"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.547"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/detail_capital_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/capital_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detailCountryName" />

        <TextView
            android:id="@+id/detail_region_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/region_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_capital_label" />

        <TextView
            android:id="@+id/detail_calling_codes_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/calling_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_region_label" />

        <TextView
            android:id="@+id/detail_subregion_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/subregion_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_calling_codes_label" />

        <TextView
            android:id="@+id/detail_population_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/population_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_subregion_label" />

        <TextView
            android:id="@+id/borders_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/borders_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/detail_population_label" />

        <TextView
            android:id="@+id/timezone_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/timezone_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/borders_label" />

        <TextView
            android:id="@+id/language_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@string/language_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/timezone_label" />

        <TextView
            android:id="@+id/currencies_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_80dp"
            android:text="@string/currency_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_label" />

        <TextView
            android:id="@+id/detail_capital"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@{viewModel.currentCountryDetails.get(0).capital}"
            app:layout_constraintStart_toEndOf="@+id/detail_capital_label"
            app:layout_constraintTop_toBottomOf="@+id/detailCountryName" />

        <TextView
            android:id="@+id/detail_region"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@{viewModel.currentCountryDetails.get(0).region}"
            app:layout_constraintStart_toEndOf="@+id/detail_region_label"
            app:layout_constraintTop_toBottomOf="@+id/detail_capital" />

        <TextView
            android:id="@+id/detail_calling_code"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@{viewModel.callingCode}"
            app:layout_constraintStart_toEndOf="@+id/detail_calling_codes_label"
            app:layout_constraintTop_toBottomOf="@+id/detail_region" />

        <TextView
            android:id="@+id/detail_subregion"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@{viewModel.currentCountryDetails.get(0).subregion}"
            app:layout_constraintStart_toEndOf="@+id/detail_subregion_label"
            app:layout_constraintTop_toBottomOf="@+id/detail_calling_code" />

        <TextView
            android:id="@+id/detail_population"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@{viewModel.currentCountryDetails.get(0).population}"
            app:layout_constraintStart_toEndOf="@+id/detail_population_label"
            app:layout_constraintTop_toBottomOf="@+id/detail_subregion" />

        <TextView
            android:id="@+id/detail_borders"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@{viewModel.borders}"
            app:layout_constraintStart_toEndOf="@+id/borders_label"
            app:layout_constraintTop_toBottomOf="@+id/detail_population" />

        <TextView
            android:id="@+id/detail_timezone"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_8dp"
            android:text="@{viewModel.timezone}"
            app:layout_constraintStart_toEndOf="@+id/timezone_label"
            app:layout_constraintTop_toBottomOf="@+id/detail_borders" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_language"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_0dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:layout_marginBottom="@dimen/margin_4dp"
            app:language_items="@{viewModel.currentCountryDetails.get(0).languages}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toTopOf="@+id/currencies_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_label" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view_currency"
            android:layout_width="wrap_content"
            android:layout_height="@dimen/size_0dp"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:layout_marginBottom="@dimen/margin_8dp"
            app:currency_items="@{viewModel.currentCountryDetails.get(0).currencies}"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/currencies_label" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>