<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context="eu.marcelomorais.countries.MainActivity">

        <ImageView
            android:id="@+id/countryFlag"
            android:layout_width="75dp"
            android:layout_height="60dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:contentDescription="@string/contentFlag"
            app:layout_constraintBottom_toTopOf="@+id/countryName"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            app:srcCompat="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/countryName"
            style="@style/country_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Country"
            app:layout_constraintStart_toEndOf="@+id/countryFlag"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/capitalLabel"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/capital_label"
            app:layout_constraintStart_toEndOf="@+id/countryFlag"
            app:layout_constraintTop_toBottomOf="@+id/countryName" />

        <TextView
            android:id="@+id/countryCapital"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="Stockholm"
            app:layout_constraintStart_toEndOf="@+id/capitalLabel"
            app:layout_constraintTop_toBottomOf="@+id/countryName" />

        <TextView
            android:id="@+id/regionLabel"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="@string/region_label"
            app:layout_constraintStart_toEndOf="@+id/countryFlag"
            app:layout_constraintTop_toBottomOf="@+id/capitalLabel" />

        <TextView
            android:id="@+id/countryRegion"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginTop="4dp"
            android:text="Europe"
            app:layout_constraintStart_toEndOf="@+id/regionLabel"
            app:layout_constraintTop_toBottomOf="@+id/countryCapital" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>