<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="language"
            type="eu.marcelomorais.countries.restApi.models.Language" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/language_constraint_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/language_iso_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/language_iso"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/language_iso"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@{language.iso639_1}"
            app:layout_constraintStart_toEndOf="@+id/language_iso_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/language_name_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@string/language_name_label"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_iso_label" />

        <TextView
            android:id="@+id/language_name_text"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@{language.name}"
            app:layout_constraintStart_toEndOf="@+id/language_name_label"
            app:layout_constraintTop_toBottomOf="@+id/language_iso" />

        <TextView
            android:id="@+id/language_native_label"
            style="@style/country_labels_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_16dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:layout_marginBottom="@dimen/margin_4dp"
            android:text="@string/language_native_label"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language_name_label" />

        <TextView
            android:id="@+id/native_name_text"
            style="@style/country_item_subheader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_8dp"
            android:layout_marginTop="@dimen/margin_4dp"
            android:text="@{language.nativeName}"
            app:layout_constraintStart_toEndOf="@+id/language_native_label"
            app:layout_constraintTop_toBottomOf="@+id/language_name_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>